examples/test/testpolicy3931.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3931
  namespace: namespace136
spec:
  podSelector:
    matchLabels:
      key46: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value0
          key29: value17
      podSelector:
        matchLabels:
          key23: value22
          key16: value0
          key46: value25
